# 30DayMapChallenge

./: .gitignore  .webui_secret_key  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/notebooks/: Folium_refresher.ipynb  nccs_nasa_pcp_timeseries.ipynb
src/utils/: download_openmeteo.py  geo_functions.py  georeference_images.py  gui_georeferencer.py  helpers.py  map_helpers.py  scrape_webpage.py
src/years/2025/: brainstorm_info.md
src/years/2025/d01_points/: main.py
src/years/2025/d02_lines/: main.py  pk_hydro_map.html
src/years/2025/d03_polygons/: main.py  pk_polymap.html
src/years/2025/d04_mydata/: main.py
src/years/2025/d05_earth/: main.py
src/years/2025/d06_dimensions/: main.py
src/years/2025/d07_accessibility/: main.py
src/years/2025/d08_urban/: main.py
src/years/2025/d09_analog/: main.py
src/years/2025/d10_air/: main.py
src/years/2025/d11_minimal/: main.py
src/years/2025/d12_2125/: main.py
src/years/2025/d13_10min/: main.py
src/years/2025/d14_osm/: main.py
src/years/2025/d15_fire/: main.py
src/years/2025/d16_cell/: main.py
src/years/2025/d17_newtool/: main.py
src/years/2025/d18_outofthisworld/: main.py
src/years/2025/d19_projections/: main.py
src/years/2025/d20_water/: main.py
src/years/2025/d21_icons/: main.py
src/years/2025/d22_naturalearth/: main.py
src/years/2025/d23_process/: main.py
src/years/2025/d24_places/: main.py
src/years/2025/d25_hexagons/: main.py
src/years/2025/d26_transport/: main.py
src/years/2025/d27_boundaries/: main.py
src/years/2025/d28_black/: main.py
(+2 files in other folders)
