[project]
name = "30daymapchallenge"
version = "0.1.0"
description = "November 30 Day Map Challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cartopy==0.24.1",
    "dask>=2025.10.0",
    "drawarrow==0.0.3",
    "folium==0.18.0",
    "geopandas==0.14.4",
    "geoplot==0.5.1",
    "h3==3.7.7",
    "h3pandas==0.2.6",
    "highlight-text==0.2",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "leafmap>=0.57.5",
    "markupsafe==2.1.3",
    "matplotlib==3.9.2",
    "matplotlib-scalebar>=0.9.0",
    "netcdf4>=1.7.3",
    "notebook>=7.4.7",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "openmeteo-requests>=1.7.4",
    "openpyxl>=3.1.5",
    "osmnx==1.9.4",
    "pandas==2.2.3",
    "plotly>=6.4.0",
    "pooch>=1.8.2",
    "pyfonts==0.0.2",
    "pypalettes==0.1.3",
    "python-decouple>=3.8",
    "pyvista[jupyter]>=0.46.4",
    "rasterstats>=0.20.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "ridge-map==0.0.5",
    "ruff>=0.14.3",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "torch",
    "torchaudio",
    "torchvision",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]
